scooter-core/tests/snapshots/app__performing_replacement_all_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1572
expression: app.keymaps_all()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit / close popup",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
