scooter-core/tests/snapshots/app__popup_compact_keymaps.snap
---
source: scooter-core/tests/app.rs
expression: app.keymaps_compact()
---
[
    (
        "<enter>",
        "jump to results",
    ),
    (
        "<tab>",
        "focus next",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
