scooter-core/tests/snapshots/app__results_with_errors_all_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1597
expression: app.keymaps_all()
---
[
    (
        "<j>",
        "down",
    ),
    (
        "<k>",
        "up",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit / close popup",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
