scooter-core/tests/snapshots/app__results_with_errors_compact_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1596
expression: app.keymaps_compact()
---
[
    (
        "<j>",
        "down",
    ),
    (
        "<k>",
        "up",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
