scooter-core/tests/snapshots/app__results_without_errors_all_keymaps.snap
---
source: scooter-core/tests/app.rs
expression: app.keymaps_all()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "close popup",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
