scooter-core/tests/snapshots/app__results_without_errors_compact_keymaps.snap
---
source: scooter-core/tests/app.rs
expression: app.keymaps_compact()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
