scooter-core/tests/snapshots/app__search_fields_all_keymaps.snap
---
source: scooter-core/tests/app.rs
expression: app.keymaps_all()
---
[
    (
        "<enter>",
        "jump to results",
    ),
    (
        "<tab>",
        "focus next",
    ),
    (
        "<S-tab>",
        "focus previous",
    ),
    (
        "<space>",
        "toggle checkbox",
    ),
    (
        "<A-u>",
        "unlock pre-populated fields",
    ),
    (
        "<C-l>",
        "toggle text wrapping in preview",
    ),
    (
        "<C-t>",
        "toggle hidden files",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "close popup",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
