scooter-core/tests/snapshots/app__search_progressing_all_keymaps.snap
---
source: scooter-core/tests/app.rs
expression: app.keymaps_all()
---
[
    (
        "<space>",
        "toggle",
    ),
    (
        "<a>",
        "toggle all",
    ),
    (
        "<v>",
        "toggle multi-select mode",
    ),
    (
        "<M-;>",
        "flip multi-select direction",
    ),
    (
        "<e>",
        "open in editor",
    ),
    (
        "<esc>",
        "back to search fields",
    ),
    (
        "<j>",
        "down",
    ),
    (
        "<k>",
        "up",
    ),
    (
        "<C-u>",
        "up half a page",
    ),
    (
        "<C-d>",
        "down half a page",
    ),
    (
        "<C-b>",
        "up a full page",
    ),
    (
        "<C-f>",
        "down a full page",
    ),
    (
        "<g>",
        "jump to top",
    ),
    (
        "<G>",
        "jump to bottom",
    ),
    (
        "<C-l>",
        "toggle text wrapping in preview",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "close popup / exit multi-select",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
