scooter-core/tests/snapshots/app__search_progressing_compact_keymaps.snap
---
source: scooter/tests/app.rs
expression: app.keymaps_compact()
---
[
    (
        "<space>",
        "toggle",
    ),
    (
        "<C-o>",
        "back to search fields",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
